k8s/app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: byte-app
  labels:
    app: byte-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: byte-app
  template:
    metadata:
      labels:
        app: byte-app
    spec:
      containers:
      - name: byte-app
        image: davidlihor/bytecraft-app
        ports:
        - name: byteapp-port
          containerPort: 8080
