k8s/rmq-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: byte-rmq
  labels:
    app: byte-rmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: byte-rmq
  template:
    metadata:
      labels:
        app: byte-rmq
    spec:
      containers:
      - name: byte-db
        image: rabbitmq
        ports:
        - name: bytermq-port
          containerPort: 5672
