k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bytecraft-service
spec:
  type: ClusterIP
  selector:
    app: byte-app
  ports:
  - port: 8080
    targetPort: byteapp-port
    protocol: TCP
