k8s/rmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  type: ClusterIP
  selector:
    app: byte-rmq
  ports:
  - port: 5672
    targetPort: bytermq-port
    protocol: TCP
